--- a/kadınemegi/index.html
+++ b/kadınemegi/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anasayfa</title>
-    <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css"> 
+<style>
+
+    
+</style>
 </head>
 <body onload="checkAuth()">
     <header>
