--- a/kadınemegi/logout.html
+++ b/kadınemegi/logout.html
@@ -24,6 +24,18 @@
         <p>Çıkış yapmak istediğinize emin misiniz?</p>
         <button id="logoutYes" class="primary">Evet</button>
         <button id="logoutNo" class="secondary">Hayır</button>
+        <script>
+            document.getElementById('logoutYes').addEventListener('click', function () {
+                localStorage.removeItem('token');
+                alert('Başarıyla çıkış yaptınız!');
+                window.location.href = 'login.html';
+            });
+            
+            document.getElementById('logoutNo').addEventListener('click', function () {
+                window.location.href = 'index.html';
+            });
+            </script>
+            
     </main>
     <script>
         document.getElementById('logoutYes').addEventListener('click', function () {
