--- a/kadınemegi/profile.html
+++ b/kadınemegi/profile.html
@@ -19,7 +19,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #db7bec;
+            background-color: #db7093;
             padding: 10px 20px;
         }
 
@@ -190,7 +190,7 @@
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="login.html">Giriş Yap</a></li>
-                <li><a href="#iletisim">İletişim</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
     </header>
@@ -284,8 +284,7 @@
 
             // Sayfa yüklendiğinde kullanıcı profilini getir
             document.addEventListener('DOMContentLoaded', getUserProfile);
-        </script>
-        <script>
+
             const accordions = document.querySelectorAll('.accordion');
             accordions.forEach(accordion => {
                 accordion.addEventListener('click', function () {
