--- a/kadınemegi/ilan-ver.html
+++ b/kadınemegi/ilan-ver.html
@@ -25,7 +25,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #db7bec;
+            background-color: #db7093;
             padding: 10px 20px;
         }
 
@@ -127,7 +127,7 @@
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="login.html">Giriş Yap</a></li>
-                <li><a href="#iletisim">İletişim</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
     </header>
