--- a/kadınemegi/register.html
+++ b/kadınemegi/register.html
@@ -164,7 +164,7 @@
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="login.html">Giriş Yap</a></li>
-                <li><a href="#iletisim">İletişim</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
     </header>
