--- a/kadınemegi/iletisim.html
+++ b/kadınemegi/iletisim.html
@@ -173,7 +173,7 @@
               <li><a href="ilan-ver.html">İlan Ver</a></li>
               <li><a href="#sohbet">Sohbet</a></li>
               <li><a href="profile.html">Profile</a></li>
-              <li><a href="login.html">Giriş Yap</a></li>
+              <li><a href="login.html" id="loginLogoutBtn">Giriş Yap</a></li>
               <li><a href="#iletisim">İletişim</a></li>
             </ul>
           </nav>
@@ -218,6 +218,8 @@
                 <button type="submit" class="submit-btn">Gönder</button>
             </form>
         </section>
+        <script src="navbar.js"></script>
+
     </main>
 
     <footer>
