--- a/kadınemegi/ilan-ver.html
+++ b/kadınemegi/ilan-ver.html
@@ -126,7 +126,7 @@
                 <li><a href="ilan-ver.html">İlan Ver</a></li>
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">Giriş Yap</a></li>
+                <li><a href="login.html" id="loginLogoutBtn">Giriş Yap</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
@@ -162,5 +162,7 @@
         </form>
     </main>
     <script src="js/ilan.js"></script>
+    <script src="navbar.js"></script>
+
 </body>
 </html>
