--- a/kadınemegi/login.html
+++ b/kadınemegi/login.html
@@ -146,11 +146,12 @@
                 <li><a href="ilan-ver.html">İlan Ver</a></li>
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">Giriş Yap</a></li>
+                <li><a href="login.html" id="loginLogoutBtn">Giriş Yap</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
     </header>
+    
     <div class="main2">
     <main >
         <h1>Kullanıcı Girişi</h1>
@@ -195,6 +196,8 @@
                 }
             });
             </script>
+            <script src="navbar.js"></script>
+
             
     </main>
 </div>
