--- a/kadınemegi/profile.html
+++ b/kadınemegi/profile.html
@@ -189,7 +189,7 @@
                 <li><a href="ilan-ver.html">İlan Ver</a></li>
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">Giriş Yap</a></li>
+                <li><a href="login.html" id="loginLogoutBtn">Giriş Yap</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
@@ -321,6 +321,8 @@
                 });
             });
         </script>
+        <script src="navbar.js"></script>
+
     </main>
 </body>
 
