--- a/kadınemegi/register.html
+++ b/kadınemegi/register.html
@@ -163,7 +163,7 @@
                 <li><a href="ilan-ver.html">İlan Ver</a></li>
                 <li><a href="#sohbet">Sohbet</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">Giriş Yap</a></li>
+                <li><a href="login.html" id="loginLogoutBtn">Giriş Yap</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
@@ -221,6 +221,7 @@
                     }
                 });
             </script>
+            <script src="navbar.js"></script>
 
 
             <button type="submit">Kayıt Ol</button>
